# warifuri

./: .bandit  .buildinfo  .gitattributes  .gitignore  .mutmut.toml  .pre-commit-config.yaml  IMPLEMENTATION_TODO.md  LICENSE  README.md  REFACTORING_SUGGESTIONS.md  RELEASE_NOTES.md  SECURITY.md  TEST_AUTOMATION_SUMMARY.md  ai_test_todo.yaml  bandit-report.json  check_typing_issues.py  debug_error_cases.py  debug_find_ready_tasks.py  debug_test.py  fix_all_graph_tests.py  fix_all_typing_imports.py  fix_context_usage.py  fix_graph_tests.py  fix_precommit.sh  fix_remaining_tests.py  fix_typing_imports.py  genindex.html  index.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.sh  test_original_bug.py  test_samples_corrected.py  test_security_fixes.py  test_signature.py
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: modules.doctree  warifuri.cli.commands.doctree  warifuri.cli.doctree  warifuri.cli.services.doctree  warifuri.core.doctree  warifuri.doctree  warifuri.schemas.doctree  warifuri.schemas.embedded.doctree  warifuri.utils.doctree
.doctrees/development/: changelog.doctree  contributing.doctree
.doctrees/user-guide/: commands.doctree  configuration.doctree  installation.doctree  quickstart.doctree  templates.doctree
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: security.md
.github/workflows/: auto-merge.yml  ci.yml  codeql.yml  deploy.yml  docs-alt.yml  docs-alt.yml.disabled  docs.yml  release.yml  warifuri-task-automation.yml
_modules/: index.html
_modules/warifuri/cli/: context.html  main.html
_modules/warifuri/core/: discovery.html  discovery_optimized.html  execution.html  github.html  types.html
_modules/warifuri/utils/: atomic.html  filesystem.html  llm.html  logging.html  templates.html  validation.html  yaml_utils.html
_sources/api/: modules.rst.txt  warifuri.cli.commands.rst.txt  warifuri.cli.rst.txt  warifuri.rst.txt  warifuri.schemas.embedded.rst.txt  warifuri.utils.rst.txt
_sources/development/: contributing.rst.txt
_sources/user-guide/: commands.rst.txt  configuration.rst.txt  installation.rst.txt  quickstart.rst.txt
api/: modules.html  warifuri.cli.commands.html  warifuri.cli.html  warifuri.cli.services.html  warifuri.core.html  warifuri.html  warifuri.schemas.embedded.html  warifuri.schemas.html  warifuri.utils.html
debug/: debug_helper.py  run_all_samples.py  test_results.json  validate_samples.py  validation_results.json
development/: changelog.html  contributing.html
docker/: Dockerfile  docker-compose.yml
docs/: GITHUB_PAGES_SETUP.md  IMPLEMENTATION_TODO.md  acceptance_test_completion_summary.md  acceptance_test_plan.md  ai_testing_guidelines.md  cli_command_list.md  design.md  development.md  e2e-test-plan.md  github-public-release-plan.md  github_actions_guide.md  instruction.template.yaml  phanx_system_documentation.md  prompt.template.yaml  requirement.md  test_commands.md
docs/debugging/: Warifuri_Cross-Project_Dependency_Resolution_エラー分析.md  comprehensive_bug_investigation.md  github_pages_troubleshooting.md  implementation_plan.md
docs/source/: conf.py  index.rst
docs/source/api/: warifuri.cli.rst  warifuri.rst  (+5 more)
docs/validation/: sample-projects-debug-strategy.md  sample-projects-strategy.md
patches/: __init__.py  snapshottest_python312_fix.py
sample-projects/cross-project/: README.md  project-app.yaml  project-core.yaml
sample-projects/multi-file/: README.md  project-multifile.yaml
sample-projects/simple-chain/: README.md  project-simple.yaml
schemas/: instruction.schema.json
scripts/: analyze_unix_philosophy.py  fix_gh_pages.sh  mutation_test.py  refactor_unix_philosophy.py
src/warifuri/: __init__.py  __main__.py
tests/: conftest.py  test_ai_integration.py  test_automation.py  test_cli.py  test_discovery_execution.py  test_filesystem.py  test_github.py  test_graph_formats.py  test_integration.py  test_issue.py  test_list_formats.py  test_llm.py  test_machine_sandboxing.py  test_mark_done.py  test_run_auto_execution.py  test_show_formats.py  test_template_init.py  test_templates.py  test_types.py  test_validation.py  test_yaml_utils.py
tests/data/: README.md
tests/e2e/: test_cli.py  test_graph_formats.py  test_issue.py  test_list_formats.py  test_mark_done.py  test_run_auto_execution.py  test_show_formats.py  test_subprocess_cli.py  test_template_init.py
tests/integration/: test_ai_integration.py  test_automation.py  test_automation_workflow.py  test_cross_project_simple.py  test_discovery_execution.py  test_execution_pipeline.py  test_integration.py  test_machine_sandboxing.py
tests/specs/: README.md  e2e_test_specification.yaml  integration_test_specification.yaml  performance_test_specification.yaml  security_test_specification.yaml  test_specification_schema.yaml  unit_test_specification.yaml
tests/unit/: test_atomic_utils.py  test_automation_command.py  test_automation_service.py  test_cli_snapshot.py  test_complex_validation.py  test_comprehensive_validation.py  test_concurrency.py  test_context.py  test_core_execution.py  test_dependency_file_resolution.py  test_discovery.py  test_discovery_optimized.py  test_execution_human.py  test_file_ops.py  test_filesystem.py  test_github.py  test_graph_command.py  test_init_command.py  test_issue_command.py  test_llm.py  test_machine_execution.py  test_minimal_data.py  test_path_security.py  test_pr_service.py  test_property_based.py  test_simple.py  test_templates.py  test_templates_utils.py  test_types.py  test_validate_command.py  test_validation.py  test_yaml_utils.py
user-guide/: commands.html  configuration.html  installation.html  quickstart.html  templates.html
warifuri/: __main__.py
warifuri/cli/: __init__.py  context.py  main.py
warifuri/core/: __init__.py  discovery.py  execution.py  github.py  types.py
warifuri/schemas/: __init__.py
warifuri/utils/: __init__.py  filesystem.py  logging.py  templates.py  validation.py  yaml_utils.py
workspace/output/: pr-test_extract_result.txt  pr-test_transform_result.txt
(+176 files in other folders)
